--- a/food.html
+++ b/food.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Home</title>
+	<title>Food</title>
 
 	<!-- Мои стили -->
 	<link rel="stylesheet" href="./style.css">
@@ -35,22 +35,22 @@
 				<p class="text-3xl" style="font-family: Merriweathe;">Visit Russia</p>
 			</div>
 			<!-- Меню -->
-			<div class="flex flex-col justify-center col-span-5 text-center p-1" style="font-family: Oswald; font-weight: 200">
+			<div class="flex flex-col justify-center col-span-5 text-center text-xl p-1" style="font-family: Oswald; font-weight: 200">
 				<ul class="flex flex-row">
 					<li class="m-2">
-						<a href="./index.html" class="noselect text-xl underline">Home</a>
+						<a href="./index.html" class="noselect text-lg hover:underline">Home</a>
 					</li>
 					<li class="m-2">
-						<a href="./accomodation.html" class="noselect text-xl hover:underline">Accomodation</a>	
+						<a href="./accomodation.html" class="noselect text-lg hover:underline">Accomodation</a>	
 					</li>
 					<li class="m-2">
-						<a href="./food.html" class="noselect text-xl hover:underline">Food</a>	
+						<a href="./food.html" class="noselect text-lg underline">Food</a>	
 					</li>
 					<li class="m-2">
-						<a href="./language.html" class="noselect text-xl hover:underline">Language</a>
+						<a href="./language.html" class="noselect text-lg hover:underline">Language</a>
 					</li>
 					<li class="m-2">
-						<a href="./transport.html" class="noselect text-xl hover:underline">Transport</a>
+						<a href="./transport.html" class="noselect text-lg hover:underline">Transport</a>
 					</li>
 				</ul>
 			</div>
@@ -72,7 +72,7 @@
 				</p>
 			</div>
 			<!-- Картинка кремля -->
-			<img class="rounded-lg shadow-lg"  src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1169E/production/_125662317_gettyimages-1143351798.jpg" alt="">
+			<img class="border-black border-4" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1169E/production/_125662317_gettyimages-1143351798.jpg" alt="">
 
 		</div>
 		<div class="col-span-2"></div>		
