--- a/food.html
+++ b/food.html
@@ -35,22 +35,22 @@
 				<p class="text-3xl" style="font-family: Merriweathe;">Visit Russia</p>
 			</div>
 			<!-- Меню -->
-			<div class="flex flex-col justify-center col-span-5 text-center text-xl p-1" style="font-family: Oswald; font-weight: 200">
+			<div class="flex flex-col justify-center col-span-5 text-center p-1" style="font-family: Oswald; font-weight: 200">
 				<ul class="flex flex-row">
 					<li class="m-2">
-						<a href="./index.html" class="noselect text-lg hover:underline">Home</a>
+						<a href="./index.html" class="noselect text-xl hover:underline">Home</a>
 					</li>
 					<li class="m-2">
-						<a href="./accomodation.html" class="noselect text-lg hover:underline">Accomodation</a>	
+						<a href="./accomodation.html" class="noselect text-xl hover:underline">Accomodation</a>	
 					</li>
 					<li class="m-2">
-						<a href="./food.html" class="noselect text-lg underline">Food</a>	
+						<a href="./food.html" class="noselect text-xl underline">Food</a>	
 					</li>
 					<li class="m-2">
-						<a href="./language.html" class="noselect text-lg hover:underline">Language</a>
+						<a href="./language.html" class="noselect text-xl hover:underline">Language</a>
 					</li>
 					<li class="m-2">
-						<a href="./transport.html" class="noselect text-lg hover:underline">Transport</a>
+						<a href="./transport.html" class="noselect text-xl hover:underline">Transport</a>
 					</li>
 				</ul>
 			</div>
@@ -59,20 +59,98 @@
 		<div class="col-span-2"></div>
 	</header>
 
-	<!-- Тело сайта -->
+		<!-- Тело сайта -->
 	<div class="grid grid-cols-12 mb-auto mt-5 p-1">
 		<div class="col-span-2"></div>
 		<!-- Контент -->
 		<div class="flex flex-col col-span-8 p-1" style="font-family: Oswald; font-weight: 300">
+
 			<!-- Вступление -->
-			<div class="flex flex-col">
-				<h1 class="text-3xl">Hello!</h1>
-				<p class="text-xl my-2">
-					Hello, this site is dedicated to Russia - the largest country in the world. I will tell you about Russian food, where you can stay overnight, the language spoken here, and transport
+			<div class="flex flex-col my-3">
+				<h1 class="text-3xl">Food</h1>
+				<p class="text-xl">
+					Visitors to Russia are often surprised at the variety and flavors of Russian cuisine, which is influenced by Russia's connection to Europe, Asia, and the Middle East. The most classic Russian recipes are made of veggies and wheat, such as soups, porridges, and stuffed dough.
 				</p>
 			</div>
-			<!-- Картинка кремля -->
-			<img class="border-black border-4" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1169E/production/_125662317_gettyimages-1143351798.jpg" alt="">
+
+			<div class="flex flex-row mt-5">
+				<div class="flex flex-col pr-10">
+					<h1 class="text-3xl">Borscht</h1>
+					<p class="text-xl">
+						Borscht is a beet soup that originated in Ukraine and was quickly adopted as a Russian specialty. Beets may seem like a strange base for soup to many Westerners, but there are plenty of reasons that this hearty soup is one of Russia’s most famous dishes. It is full of meat and sautéed vegetables, including cabbage, carrots, onions, and potatoes. It can be served hot or cold and is best served with a dollop of fresh sour cream on top.
+					</p>
+				</div>
+				<img class="max-w-xs rounded-lg shadow-lg" src="https://www.tripsavvy.com/thmb/3KeATU0oWSNoNZK7uKUwGWRDuJE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5033415296_4d025683af_o-5b953ba946e0fb00251ecdb5.jpg" alt="">
+			</div>
+
+			<div class="flex flex-row mt-5">
+				<img class="max-w-xs rounded-lg shadow-lg" src="https://www.tripsavvy.com/thmb/wdp4BTqslso3sVWKXpa_uGSta2s=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-556668045-5b953f7b46e0fb0050af9cce.jpg" alt="">
+				<div class="flex flex-col pl-10">
+					<h1 class="text-3xl">Shchi</h1>
+					<p class="text-xl">
+						Shchi is a typical cabbage soup made from either fresh or fermented cabbage. While different recipes call for various ingredients, shchi often contains potatoes, carrots, onions, and possibly some meat such as chicken. The cabbage can also be replaced with sauerkraut, called sour shchi.
+					</p>
+				</div>
+			</div>
+
+			<div class="flex flex-row mt-5">
+				<div class="flex flex-col pr-10">
+					<h1 class="text-3xl">Ukha</h1>
+					<p class="text-xl">
+						If you like seafood, try ukha, a fish soup with a clear broth. Many different kinds of fish can be used to make this soup, including bream, wels catfish, northern pike, and ruffe. The remaining ingredients are not unlike what you might find in a traditional chicken soup—think root vegetables, parsley, leeks, and dill.
+					</p>
+				</div>
+				<img class="max-w-xs rounded-lg shadow-lg" src="https://www.tripsavvy.com/thmb/HypYx9hdN3C1bfVSCHX7CUPWx6k=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-481788895-5b95407d46e0fb0025158801.jpg" alt="">
+			</div>
+
+			<div class="flex flex-row mt-5">
+				<img class="max-w-xs rounded-lg shadow-lg" src="https://www.tripsavvy.com/thmb/-hdg8UDLX6j6BRB1t5B_6Obd26M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-860056464-5b953fed46e0fb0050e7cf09.jpg" alt="">
+				<div class="flex flex-col pl-10">
+					<h1 class="text-3xl">Solyanka</h1>
+					<p class="text-xl">
+						Solyanka is a thick soup that is plentiful enough to be a meal in itself. This soup is made with various types of meat, including sausage, bacon, ham, and beef, as well as vegetables such as cabbage, carrots, onions, and potatoes. Chopped pickles and the traditional lemon slice garnish play an essential role in giving this recipe its sour flavor. It is often also made with fish and pickled cucumbers.
+					</p>
+				</div>
+			</div>
+
+			<div class="flex flex-row mt-5">
+				<div class="flex flex-col pr-10">
+					<h1 class="text-3xl"></h1>
+					<p class="text-xl">
+					</p>
+				</div>
+				<img class="max-w-xs rounded-lg shadow-lg" src="" alt="">
+			</div>
+
+			<div class="flex flex-row mt-5">
+				<img class="max-w-xs rounded-lg shadow-lg" src="https://www.tripsavvy.com/thmb/Q2LD_477zph7i7Gecn7GueQufqc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-963191098-5b95558546e0fb0050b32582.jpg" alt="">
+				<div class="flex flex-col pl-10">
+					<h1 class="text-3xl">Kvass</h1>
+					<p class="text-xl">
+						Kvass is a refreshing fermented beverage with slight carbonation. Although it has a very slight alcohol content, it is not considered an alcoholic beverage. It is made from black or regular rye bread or dough and can be flavored with a variety of different things, ranging from honey to berries to herbs.
+					</p>
+				</div>
+			</div>
+
+			<div class="flex flex-row mt-5">
+				<div class="flex flex-col pr-10">
+					<h1 class="text-3xl">Blini</h1>
+					<p class="text-xl">
+						Blini is a wheat pancake rolled with various fillings: jam, cheese, sour cream, caviar, onions, or even chocolate syrup. It is Russia's equivalent of a crepe. At any restaurant where you aren't sure of any of the other dishes, blini are always a safe bet. Blini are such an important part of Russian cuisine that a festival called Maslenitsa celebrates the beginning of spring with them.
+					</p>
+				</div>
+				<img class="max-w-xs rounded-lg shadow-lg" src="https://www.tripsavvy.com/thmb/Zjt_r2vCSjLZiOFJfDQFOkT3ZN4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-688354790-5b9542964cedfd002552fb19.jpg" alt="">
+			</div>
+
+			<div class="flex flex-row mt-5">
+				<img class="max-w-xs rounded-lg shadow-lg" src="https://www.tripsavvy.com/thmb/NeM1IDX0cWPuVp8pZXQoGx76O-c=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-907621868-5b9541804cedfd002506e18e.jpg" alt="">
+				<div class="flex flex-col pl-10">
+					<h1 class="text-3xl">Pelmeni</h1>
+					<p class="text-xl">
+						Pelmeni is considered the national dish of Russia. They are pastry dumplings are typically filled with minced meat and wrapped in a thin, pasta-like dough. They can be served alone, slathered in butter and topped with sour cream, or in a soup broth. A favorite in Russia and Eastern Europe!
+					</p>
+				</div>
+			</div>
 
 		</div>
 		<div class="col-span-2"></div>		
