--- a/transport.html
+++ b/transport.html
@@ -35,22 +35,22 @@
 				<p class="text-3xl" style="font-family: Merriweathe;">Visit Russia</p>
 			</div>
 			<!-- Меню -->
-			<div class="flex flex-col justify-center col-span-5 text-center text-xl p-1" style="font-family: Oswald; font-weight: 200">
+			<div class="flex flex-col justify-center col-span-5 text-center p-1" style="font-family: Oswald; font-weight: 200">
 				<ul class="flex flex-row">
 					<li class="m-2">
-						<a href="./index.html" class="noselect text-lg hover:underline">Home</a>
+						<a href="./index.html" class="noselect text-xl hover:underline">Home</a>
 					</li>
 					<li class="m-2">
-						<a href="./accomodation.html" class="noselect text-lg hover:underline">Accomodation</a>	
+						<a href="./accomodation.html" class="noselect text-xl hover:underline">Accomodation</a>	
 					</li>
 					<li class="m-2">
-						<a href="./food.html" class="noselect text-lg hover:underline">Food</a>	
+						<a href="./food.html" class="noselect text-xl hover:underline">Food</a>	
 					</li>
 					<li class="m-2">
-						<a href="./language.html" class="noselect text-lg hover:underline">Language</a>
+						<a href="./language.html" class="noselect text-xl hover:underline">Language</a>
 					</li>
 					<li class="m-2">
-						<a href="./transport.html" class="noselect text-lg underline">Transport</a>
+						<a href="./transport.html" class="noselect text-xl underline">Transport</a>
 					</li>
 				</ul>
 			</div>
