--- a/language.html
+++ b/language.html
@@ -66,13 +66,26 @@
 		<div class="flex flex-col col-span-8 p-1" style="font-family: Oswald; font-weight: 300">
 			<!-- Вступление -->
 			<div class="flex flex-col">
-				<h1 class="text-3xl">Hello!</h1>
+				<h1 class="text-3xl">Russian Language: National Language Of Russia</h1>
+				<div class="grid grid-cols-8">
+					<p class="text-xl my-2 col-span-6 mr-10">
+						Russian is the language enshrined in the Constitution of Russia as the nation’s national language.
+						Russian is also one of the most widespread languages in the world, with speakers in Russia, Ukraine, Kazakhstan, Kyrgyzstan, Ukraine, Latvia, Moldova, Estonia, Georgia Tajikistan, Lithuania, Azerbaijan, Uzbekistan, and Belarus.
+						The Russian language is also used as an official language in the United Nations, and also a primary language used by internet users around the world. The Russian language in its written form uses its distinct alphabet with additional consonants and vowels, which are based on the Cyrillic script.
+						The global population of Russian native speakers is estimated to be 260 million people, with the majority residing in the former Russian Federation. The Russian language is classified as an Indo-European language and is one of the four East Slavic languages.
+					</p>
+					<img class="rounded-lg shadow-lg col-span-2"  src="./img/ru-lang.jpg" alt="">
+				</div>
+			</div>
+
+			<div class="flex flex-col mt-5">
+				<h1 class="text-3xl">Other Official Languages Of Russia</h1>
 				<p class="text-xl my-2">
-					Hello, this site is dedicated to Russia - the largest country in the world. I will tell you about Russian food, where you can stay overnight, the language spoken here, and transport
+					Besides Russian, there are other numerous languages which have been adopted as the official languages in Russia. 
+					These languages include; Ossetic, Ukrainian, Buryat, Kalmyk, Chechen, Ingush, Abaza, Adyghe, Cherkess, Kabardian, Altai, Bashkir, Chuvash, Crimean Tatar, Karachay-Balkar, Khakas, Nogai, Tatar, Tuvan, Yakut, Erzya, Komi, Hill Mari, Meadow Mari, Moksha, and Udmurt. 
+					These languages have thousands of native speakers who make up a significant percentage of the total Russian population.
 				</p>
 			</div>
-			<!-- Картинка кремля -->
-			<img class="border-black border-4" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1169E/production/_125662317_gettyimages-1143351798.jpg" alt="">
 
 		</div>
 		<div class="col-span-2"></div>		
