--- a/transport.html
+++ b/transport.html
@@ -72,7 +72,7 @@
 				</p>
 			</div>
 			<!-- Картинка кремля -->
-			<img class="border-black border-4" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1169E/production/_125662317_gettyimages-1143351798.jpg" alt="">
+			<img class="rounded-lg shadow-lg"  src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1169E/production/_125662317_gettyimages-1143351798.jpg" alt="">
 
 		</div>
 		<div class="col-span-2"></div>		
