places added and getting to russia added

--- a/accomodation.html
+++ b/accomodation.html
@@ -52,6 +52,9 @@
 					<li class="m-2">
 						<a href="./transport.html" class="noselect hover:underline text-xl">Transport</a>
 					</li>
+					<li class="m-2">
+						<a href="./places.html" class="noselect text-xl hover:underline">Places to visit</a>
+					</li>
 				</ul>
 			</div>
 		</div>
