--- a/transport.html
+++ b/transport.html
@@ -52,6 +52,9 @@
 					<li class="m-2">
 						<a href="./transport.html" class="noselect text-xl underline">Transport</a>
 					</li>
+					<li class="m-2">
+						<a href="./places.html" class="noselect text-xl hover:underline">Places to visit</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -64,9 +67,20 @@
 		<div class="col-span-2"></div>
 		<!-- Контент -->
 		<div class="flex flex-col col-span-8 p-1" style="font-family: Oswald; font-weight: 300">
-			<!-- Вступление -->
+
+			<!-- Вступление 1 -->
+			<div class="flex flex-col mb-5">
+				<h1 class="text-3xl">Getting to Russia</h1>
+				<p class="text-xl my-2">
+					Traveling to Russia is easy. There are direct flights to Russia from many cities around the world. You also have the option of traveling by boat, train, bus, or even by car.
+				</p>
+			</div>
+
+			<hr>
+
+			<!-- Вступление 2 -->
 			<div class="flex flex-col">
-				<h1 class="text-3xl">How to get around Russia</h1>
+				<h1 class="text-3xl mt-5">How to get around Russia</h1>
 				<p class="text-xl my-2">
 					Russia offers incredible natural and cultural destinations to impress even the most sophisticated travelers.
 					The beautiful Russian capital, the overwhelming St Petersburg, the endless vast lands of the Russian tundra, or the North with the magic of the Aurora – whichever destination you chose, we recommend planning your itinerary thoroughly in advance and learning about some peculiarities of the country. To prepare better for your trip, please, find a list of transportation tips below.
